# blank-python-project

./: .blank-project.linux-64.conda-lock.yml  .blank-project.osx-64.conda-lock.yml  .blank-project.win-64.conda-lock.yml  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .travis.yml  404.html  README.md  data.json  environment.devenv.yml  index.html  jupytext.toml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py  sitemap.xml  tasks.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  checks-and-linters.yml  codeql.yml  conda-lock-update.yml  create-tags.yml  devenv.yml  linux-osx.yml  linux.yml  osx.yml  pre-commit-autoupdate.yml  publish-docs.yml  pypi-release.yml  tests-conda.yml  tests-venv.yml  windows.yml
Tutorials/: fancy_demonstration.py
Tutorials/fancy_demonstration/: fancy_demonstration.ipynb  index.html
background/: index.html
css/: nb-prompts.css
docs/: Makefile  background.md  conf.py  index.md  notebooks.md  reference.md  requirements_docs.txt
docs/javascripts/: mathjax.js
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_76a75bd03361da29_test_foo_py.html  z_bc2a22054443641c_foo_py.html  z_bc2a22054443641c_goo_py.html  z_d386ba265cd31930_foo_py.html
javascripts/: content_view.js
mypackage/: foo.py
notebooks/: index.html  mkdocs.yml
notebooks/supported/: fancy_demonstration.ipynb
notebooks/unsupported/: wip_study.ipynb  wip_study.py
reference/: index.html
search/: search_index.json
src/mypackage/: goo.py
tests/: test_foo.py
