[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.2"
description = "A short description"
readme = "README.md"
keywords = ["template", "python", "project"]
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Your name", email = "your.email@somewhere.com" }
]

dependencies = [
  "numpy",
  "pytest",
  "numpydoc"
]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://volpatto.github.io/blank-python-project/"
Documentation = "https://volpatto.github.io/blank-python-project/"
Repository = "https://github.com/volpatto/blank-python-project"
Issues = "https://github.com/volpatto/blank-python-project/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mypackage",
]
