[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blank-python-package"
version = "0.1.10"
description = "A short description"
readme = "README.md"
keywords = ["template", "python", "project"]
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Your name", email = "your.email@somewhere.com" }
]

dependencies = [
  "numpy",
  "pytest",
  "numpydoc"
]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://volpatto.github.io/blank-python-project/"
Documentation = "https://volpatto.github.io/blank-python-project/"
Repository = "https://github.com/volpatto/blank-python-project"
Issues = "https://github.com/volpatto/blank-python-project/issues"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest-cov",
  "pytest-xdist",
  "coverage",
  "mypy",
  "invoke",
  "rich",
  "notebook",
  "jupyter",
  "diff_cover",
  "nb-clean",
  "nbval"
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-jupyter",
]

[tool.setuptools]
# map the “root” of all your packages to src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# look under src/ for any packages matching "mypackage*"
where  = ["src"]
include = ["mypackage*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/mypackage",
    "notebooks/supported"
]

[tool.diff_cover]
compare_branch = "origin/main"
fail_under=100
